--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -41,6 +41,8 @@
     "devDependencies": {
         "autoprefixer": "^10.4.0",
         "postcss": "^8.4.5",
-        "tailwindcss": "^3.0.5"
+        "tailwindcss": "^3.0.5",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.5"
     }
 }
