--- a/.github/workflows/deploy_pipeline.yml
+++ b/.github/workflows/deploy_pipeline.yml
@@ -14,13 +14,15 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        working-directory: ./portfolio-app
 
       - name: Build React app
         run: npm run build
+        working-directory: ./portfolio-app
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
+          publish_dir: ./portfolio-app/public
           publish_branch: gh-pages
