--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -7,12 +7,14 @@
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
+        "98.css": "^0.1.20",
         "p5": "^1.4.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.2.1",
-        "react-scripts": "5.0.0",
-        "web-vitals": "^2.1.2"
+        "react-scripts": "^5.0.1",
+        "web-vitals": "^2.1.2",
+        "xp.css": "^0.2.6"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -41,7 +43,6 @@
     "devDependencies": {
         "autoprefixer": "^10.4.0",
         "postcss": "^8.4.5",
-        "tailwindcss": "^3.0.5",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.5"
     }
