--- a/portfolio-app/src/components/pages/home/home_config.json
+++ b/portfolio-app/src/components/pages/home/home_config.json
@@ -19,6 +19,7 @@
                             "title": "Contact"
                         },
                         {
+                            "is_special": true,
                             "title": "Socials"
                         }
                     ]
