--- a/.github/workflows/cloudfront.yml
+++ b/.github/workflows/cloudfront.yml
@@ -28,7 +28,7 @@ jobs:
         aws-region: us-east-1
 
     - name: Deploy site to S3 bucket
-      run: aws s3 sync .portfolio-app/build/ s3://${{secrets.AWS_PORTFOLIO_S3_WEB_NAME}} --delete
+      run: aws s3 sync ./portfolio-app/build/ s3://${{secrets.AWS_PORTFOLIO_S3_WEB_NAME}} --delete
       
     - name: Invalidate Distribution
       run: aws cloudfront create-invalidation --distribution-id ${{secrets.AWS_PORTFOLIO_CLOUDFRONT_ID}} --paths "/*"
