--- a/.github/workflows/cloudfront.yml
+++ b/.github/workflows/cloudfront.yml
@@ -28,6 +28,9 @@ jobs:
         aws-region: us-east-1
 
     - name: Deploy site to S3 bucket
+      run: aws s3 ls
+      
+    - name: Deploy site to S3 bucket
       run: aws s3 sync ./portfolio-app/build/ s3://${{secrets.AWS_PORTFOLIO_S3_WEB_NAME}} --delete
       
     - name: Invalidate Distribution
