--- a/.github/workflows/cloudfront.yml
+++ b/.github/workflows/cloudfront.yml
@@ -12,6 +12,14 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v1
 
+    - name: Find and Replace
+      uses: jacobtomlinson/gha-find-replace@v3
+      with:
+        find: "#{HOMEPAGE}"
+        replace: "www.hinkpie.com"
+        include: "./portfolio-app"
+        regex: true
+
     - name: Install dependencies
       run: npm install
       working-directory: ./portfolio-app
