--- a/.github/workflows/deploy_pipeline.yml
+++ b/.github/workflows/deploy_pipeline.yml
@@ -12,6 +12,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Find and Replace
+        uses: jacobtomlinson/gha-find-replace@v3
+        with:
+          find: "#{HOMEPAGE}"
+          replace: "https://mahc30.github.io/portfolio/"
+          include: "./portfolio-app"
+          regex: true
+          
       - name: Install dependencies
         run: npm install
         working-directory: ./portfolio-app
