--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -2,7 +2,7 @@
     "name": "portfolio-app",
     "version": "0.1.0",
     "private": true,
-    "homepage": "#{HOMEPAGE}",
+    "homepage": "https://d1c4s24eb85rk9.cloudfront.net/",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
