--- a/portfolio-app/tsconfig.json
+++ b/portfolio-app/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es5",
     "module": "esnext",
     "lib": [
-      "es6"
+      "DOM"
     ],
     "allowJs": true,
     "outDir": "build",
